# Listen

./: .gitignore  README.md  go.mod  go.sum  main.go  meson.build
audio/: art.go  audio.go
data/: meson.build  moe.jade.oct2pus.listen.appdata.xml  moe.jade.oct2pus.listen.contract  moe.jade.oct2pus.listen.desktop
debian/: changelog  control  copyright  rules
gui/: actions.go  constants.go  elements.go  gui.go  widgets.go
gui/actions/: actions.go
gui/widgets/: appwindow.go  header.go  popmenu.go  trackbox.go  widgets.go
gui/widgets/appwindow/: appwindow.go
gui/widgets/header/: header.go
gui/widgets/popmenu/: popmenu.go
gui/widgets/trackbox/: trackbox.go
logic/: art.go  audio.go  audiodata.go  constants.go  error.go  util.go
meson/: build.fish  icons.fish
src/: go.mod  go.sum  main.go
src/gui/: actions.go  elements.go  widgets.go
src/logic/: art.go
util/: util.go
